--- a/clase2/index.html
+++ b/clase2/index.html
@@ -7,7 +7,14 @@
 </head>
 <body>
     <h1>Hola </h1>
-        <h2>mundo</h2>
-             <h3>ddsdd</h3>
+        <h2>Mi nombre es:</h2> Francisco Perez
+        <h2>Objetivos del curso:</h2> Aprender html
+        <h3>Mini bio:</h3> 
+        <p>
+
+        Soy estudiante de frontend
+          
+        </p> 
+        
 </body>
 </html>
