--- a/clase2/index.html
+++ b/clase2/index.html
@@ -1,20 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi sitio web</title>
 </head>
+
 <body>
     <h1>Hola </h1>
-        <h2>Mi nombre es:</h2> Francisco Perez
-        <h2>Objetivos del curso:</h2> Aprender html
-        <h3>Mini bio:</h3> 
-        <p>
-
-        Soy estudiante de frontend
-          
-        </p> 
+    <h2>Mi nombre es:</h2> Francisco Perez
+    <h2>Objetivos del curso:</h2> Aprender html
+    <h3>Mini bio:</h3>
+    <p>Soy estudiante de frontend </p>
+    <h3> Multimedia en html </h3>
+    <img src="./imagenes/gato.jpg" alt="imagen de gato"> <br>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/5NV6Rdv1a3I?si=IcEnNaDyXIT9LxTP"
+        title="YouTube video player" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    <hr>
+        <h4>Listas</h4>
+        <h5>Hacer un mate</h5>
+        <ol>
+            <li> Calentar agua.</li>
+            <li> Colocar yerba en el mate.</li>
+            <li> Colocar un poco de agua tibia en el mate.</li>
+            <li> Cebar mate.</li>
+        </ol>
         
+        <h5>Nombres</h5>
+        <ol>
+            <li> Juan. </li>
+            <li> Luis. </li>
+            <li> Sofia. </li>
+            <li> Paula. </li>
+            <li> Belén </li>
+        </ol>
+
+    <footer> 2024 </footer>
 </body>
+
 </html>
