--- a/clase3/index.html
+++ b/clase3/index.html
@@ -20,7 +20,7 @@
     <h2 class="subtitulos">Mi nombre es:</h2> Francisco Perez
     <h2 class="subtitulos">Objetivos del curso:</h2> Aprender html
     <h3>Mini bio:</h3>
-    <p>Soy estudiante de frontend </p>
+    <p>Soy de Tyr Halen Chubut </p>
     <section>
         <h3> Multimedia en html </h3>
         <img src="./imagenes/gato.jpg" alt="imagen de gato"> <br>
