--- a/clase3/index.html
+++ b/clase3/index.html
@@ -6,20 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mi sitio web</title>
     <link rel="stylesheet" href="estilos.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
+
 </head>
 
 <body>
-    <header>
+    <header id="Encabezado" class="encabezado">
+        <div class="iralpie"><a href="#pie">Ir al pie</a></div>
         <nav>
-            <ul>
+            <ul class="texto1">
                 <li> <a href="index.html">Home</a></li>
+                <li><a href="">Nosotros</a>  </li>
+                <li> <a href="">Contacto</a></li>
+                <li><a href="./pages/personajes.html">Personajes</a></li>
             </ul>
         </nav>
     </header>
     <h1 class="titulo">Hola </h1>
     <h2 class="subtitulos">Mi nombre es:</h2> Francisco Perez
     <h2 class="subtitulos">Objetivos del curso:</h2> Aprender html
-    <h3>Mini bio:</h3>
+    <h3 class="prueba-texto">Mini bio:</h3>
     <p>Soy de Tyr Halen, Chubut </p>
     <section>
         <h3> Multimedia en html </h3>
@@ -48,12 +58,16 @@
         <li> Belén </li>
     </ul>
 
-<section>
-<p class="rojo">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat aperiam nam blanditiis voluptatum eum dolores culpa obcaecati, unde provident accusantium eligendi, laudantium, voluptates at maxime impedit! Enim debitis explicabo repellat.</p>
-<p id="verde">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde mollitia libero dolores ipsam facere aliquam ipsa illo incidunt. Optio tempora nobis impedit ipsa laborum iusto asperiores quos cupiditate. Fuga, at?</p>
-</section>    
+    <section>
+        <p class="rojo">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat aperiam nam blanditiis
+            voluptatum eum dolores culpa obcaecati, unde provident accusantium eligendi, laudantium, voluptates at
+            maxime impedit! Enim debitis explicabo repellat.</p>
+        <p id="verde">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde mollitia libero dolores ipsam
+            facere aliquam ipsa illo incidunt. Optio tempora nobis impedit ipsa laborum iusto asperiores quos
+            cupiditate. Fuga, at?</p>
+    </section>
 
-    <footer> 2024 </footer>
+    <footer id="pie"> 2024 </footer>
 </body>
 
 </html>
