--- a/clase3/index.html
+++ b/clase3/index.html
@@ -20,7 +20,7 @@
         <nav>
             <ul class="texto1">
                 <li> <a href="index.html">Home</a></li>
-                <li><a href="">Nosotros</a>  </li>
+                <li><a href="./pages/nosotros.html">Nosotros</a>  </li>
                 <li> <a href="">Contacto</a></li>
                 <li><a href="./pages/personajes.html">Personajes</a></li>
             </ul>
