--- a/clase2/index.html
+++ b/clase2/index.html
@@ -8,6 +8,13 @@
 </head>
 
 <body>
+    <header>
+        <nav>
+            <ul>
+                <li> <a href="index.html">Home</a></li>
+            </ul>
+        </nav>
+    </header>
     <h1>Hola </h1>
     <h2>Mi nombre es:</h2> Francisco Perez
     <h2>Objetivos del curso:</h2> Aprender html
