--- a/clase3/index.html
+++ b/clase3/index.html
@@ -14,14 +14,14 @@
 
 </head>
 
-<body>
+<body class="general">
     <header id="Encabezado" class="encabezado">
         <div class="iralpie"><a href="#pie">Ir al pie</a></div>
         <nav>
             <ul class="texto1">
                 <li> <a href="index.html">Home</a></li>
                 <li><a href="./pages/nosotros.html">Nosotros</a>  </li>
-                <li> <a href="">Contacto</a></li>
+                <li> <a href="./pages/contacto.html">Contacto</a></li>
                 <li><a href="./pages/personajes.html">Personajes</a></li>
             </ul>
         </nav>
