--- a/clase3/pages/personajes.html
+++ b/clase3/pages/personajes.html
@@ -8,14 +8,14 @@
 </head>
 <body>
     <header id="Encabezado" class="encabezado">
-        <h1>Personajes</h1>
+        
         <div class="iralpie"><a href="#pie">Ir al pie</a></div>
         <nav>
             <ul class="texto1">
                 <li> <a href="../index.html">Home</a></li>
-                <li> <a href="">Nosotros</a></li>
-                <li> <a href="">Contacto</a></li>
-                <li><a href="personajes.html">Personajes</a></li>
+                <li> <a href="../pages/nosotros.html">Nosotros</a></li>
+                <li> <a href="../pages/contacto.html">Contacto</a></li>
+                <li><a href="../pages/personajes.html">Personajes</a></li>
             </ul>
         </nav>
     </header>
