--- a/clase3/index.html
+++ b/clase3/index.html
@@ -26,7 +26,9 @@
             </ul>
         </nav>
     </header>
-    <h1 class="titulo">Hola </h1>
+    <main>
+    <h1 class="titulo">Pagina de gatos</h1>
+    </main>
     <h2 class="subtitulos">Mi nombre es:</h2> Francisco Perez
     <h2 class="subtitulos">Objetivos del curso:</h2> Aprender html
     <h3 class="prueba-texto">Mini bio:</h3>
@@ -67,7 +69,9 @@
             cupiditate. Fuga, at?</p>
     </section>
 
-    <footer id="pie"> 2024 </footer>
+    <footer class="piedepagina" id="pie"> 
+    <div> 2024 </div>    
+    </footer>
 </body>
 
 </html>
