--- a/clase3/pages/contacto.html
+++ b/clase3/pages/contacto.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../estilos.css">
 </head>
+
 <body class="general">
     <header id="Encabezado" class="encabezado">
-        
+
         <div class="iralpie"><a href="#pie">Ir al pie</a></div>
         <nav>
             <ul class="texto1">
@@ -19,9 +21,45 @@
             </ul>
         </nav>
     </header>
-    
-    <footer id="pie">
+    <section class="contenidocontacto">
+        <h2>Contactá a nuestros gatos</h2>
+        <div>
+            <h3>Blanco</h3>
+            <div class="imgcontenido">
+                <img src="../imagenes/blanco.jfif" alt="blanco">
+            </div>
+        </div>
+        <div>
+            <h3>Smoking</h3>
+            <div class="imgcontenido">
+                <img src="../imagenes/smoking.jfif" alt="smoking">
+            </div>
+        </div>
+        <div>
+            <h3>Naranja</h3>
+            <div class="imgcontenido">
+                <img src="../imagenes/naranja.jfif" alt="galenso">
+            </div>
+        </div> 
+    </section>
+
+<aside class="contactosugerencias">
+    <h4>Sugerencias de contacto</h4>
+
+<div class="listasugerencias">
+    <img src="../imagenes/telefono.jfif" alt="telefono">
+<ul class="listadosugerencias">
+    <li>Gato blanco</li>
+    <li>Gato carey</li>
+    <li>Gato smoking</li>
+    <li>Gato gris</li>
+</ul>
+</div>
+</aside>
+
+    <footer id="pie" class="piedepagina">
         <a href="../index.html">Volver</a>
     </footer>
 </body>
+
 </html>
