--- a/clase3/pages/nosotros.html
+++ b/clase3/pages/nosotros.html
@@ -22,7 +22,7 @@
     <div class="box_model">
         <p class="letra">Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis optio id earum beatae velit amet reprehenderit animi magni ducimus laboriosam, quam sed deleniti odit perferendis! Id, temporibus. Ipsa, inventore nihil.</p>
     </div>
-    <footer id="pie">
+    <footer id="pie" class="piedepagina">
         <a href="../index.html">Volver</a>
     </footer>
 </body>
