--- a/clase3/pages/personajes.html
+++ b/clase3/pages/personajes.html
@@ -21,9 +21,11 @@
     </header>
     <section>
         <h3> Multimedia en html </h3>
-        <img src="../imagenes/tipos.jpg" alt="tipos de gatos"> <br>
+        
+        <img src="../imagenes/tipos.jpg" alt="tipos de gatos" class="imagen-gato"> <br>
+        
     </section>
-    <footer id="pie">
+    <footer id="pie" class="piedepagina">
         <a href="../index.html">Volver</a>
     </footer>
 </body>
