--- a/clase3/index.html
+++ b/clase3/index.html
@@ -20,14 +20,14 @@
         <nav>
             <ul class="texto1">
                 <li> <a href="index.html">Home</a></li>
-                <li><a href="./pages/nosotros.html">Nosotros</a>  </li>
+                <li><a href="./pages/nosotros.html">Nosotros</a> </li>
                 <li> <a href="./pages/contacto.html">Contacto</a></li>
                 <li><a href="./pages/personajes.html">Personajes</a></li>
             </ul>
         </nav>
     </header>
     <main>
-    <h1 class="titulo">Pagina de gatos</h1>
+        <h1 class="titulo">Pagina de gatos</h1>
     </main>
     <h2 class="subtitulos">Mi nombre es:</h2> Francisco Perez
     <h2 class="subtitulos">Objetivos del curso:</h2> Aprender html
@@ -37,7 +37,7 @@
         <h3> Multimedia en html </h3>
         <img src="./imagenes/gato.jpg" alt="imagen de gato"> <br>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/5NV6Rdv1a3I?si=IcEnNaDyXIT9LxTP"
-            title="YouTube video player" frameborder="0"
+            title="YouTube video player" 
             allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
             referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
     </section>
@@ -61,6 +61,7 @@
     </ul>
 
     <section>
+        <h4 class="prueba-texto"> Prueba de textos</h4>
         <p class="rojo">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat aperiam nam blanditiis
             voluptatum eum dolores culpa obcaecati, unde provident accusantium eligendi, laudantium, voluptates at
             maxime impedit! Enim debitis explicabo repellat.</p>
@@ -69,8 +70,8 @@
             cupiditate. Fuga, at?</p>
     </section>
 
-    <footer class="piedepagina" id="pie"> 
-    <div> 2024 </div>    
+    <footer class="piedepagina" id="pie">
+        <div> 2024 </div>
     </footer>
 </body>
 
